minor changes to s to the name and what not

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mongoose": "^5.7.8",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
@@ -19,5 +20,4 @@
   "eslintConfig": {
     "extends": "react-app"
   }
- 
 }
